# smth-gstreamer

./: CMakeLists.txt  README.md  main.cpp
